--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,18 @@
-.App {
-  text-align: center;
+/* Google Font */
+@import url('https://fonts.googleapis.com/css?family=Nunito:400,400i,600,700,800');
+
+/* Font Awesome */ 
+@import url('https://use.fontawesome.com/releases/v5.5.0/css/all.css');
+
+
+* , *:after, *:before {
+  box-sizing: border-box; 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  padding: 0;
+  margin: 0;
+  font-family: Nunito, sans-serif;
+  background-color: #eee;
+  z-index: -1;
 }
